@@ -1877,7 +1877,6 @@ bool FrameLoader::canCachePage()
         && !m_containsPlugIns
         && !m_URL.protocolIs("https")
         && m_frame->document()
-        && !m_frame->document()->applets()->length()
         && !m_frame->document()->hasWindowEventListener(unloadEvent)
 #if ENABLE(DATABASE)
         && !m_frame->document()->hasOpenDatabases()
@@ -4778,7 +4777,11 @@ Widget* FrameLoader::createJavaAppletWidget(const IntSize& size, Element* elemen
         baseURLString = m_frame->document()->baseURL().string();
     KURL baseURL = completeURL(baseURLString);
 
-    return m_client->createJavaAppletWidget(size, element, baseURL, paramNames, paramValues);
+    Widget* widget = m_client->createJavaAppletWidget(size, element, baseURL, paramNames, paramValues);
+    if (widget)
+        m_containsPlugIns = true;
+    
+    return widget;
 }
 
 void FrameLoader::didChangeTitle(DocumentLoader* loader)
