@@ -1,3 +1,14 @@
+2008-06-26  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Brady.
+
+        Don't enumerate document.applets trying to determine if a page contains applets.
+        Instead, set m_containsPlugIns to true when an applet has been created.
+        
+        * loader/FrameLoader.cpp:
+        (WebCore::FrameLoader::canCachePage):
+        (WebCore::FrameLoader::createJavaAppletWidget):
+
 2008-06-26  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Maciej.
